# hermes

./: .gitignore  .gitmodules  CLAUDE.md  Doxyfile  README.md  flake.nix  pyproject.toml
.agent/rules/: hermes.md
.beads/: last-touched
.claude/: settings.local.json
.github/hooks/: pre-commit
.github/workflows/: ci.yml  coverage.yml  docs.yml
docs/: implementation_plan.md
docs/implementation_plans/: README.md  phase1_foundation.md  phase2_websocket.md  phase3.5_icarus.md  phase3_multimodule.md  phase4_polish.md
docs/user_guide/: architecture.md  overview.md  quickstart.md  websocket.md
examples/: basic_sim.yaml  mock_module.py  multi_module.yaml  websocket_client.py  websocket_telemetry.yaml
include/hermes/: module.h
scripts/: bump_version.sh  ci.sh  clean.sh  coverage.sh  dev.sh  generate_docs.sh  install-hooks.sh  test.sh
src/hermes/: __init__.py
src/hermes/adapters/: __init__.py  icarus.py  injection.py
src/hermes/backplane/: __init__.py  shm.py  signals.py  sync.py
src/hermes/cli/: __init__.py  main.py
src/hermes/core/: __init__.py  config.py  module.py  process.py  router.py  scheduler.py  signal.py
src/hermes/modules/: __init__.py  injection.py  mock_physics.py
src/hermes/protocol/: __init__.py  messages.py
src/hermes/scripting/: __init__.py  api.py
src/hermes/server/: __init__.py  protocol.py  telemetry.py  websocket.py
tests/: __init__.py  conftest.py  test_scheduler.py  test_signal_bus.py
tests/test_backplane/: __init__.py  test_shm.py  test_signals.py  test_sync.py
tests/test_cli/: test_main.py
tests/test_core/: __init__.py  test_config.py  test_process.py  test_scheduler.py
tests/test_integration/: __init__.py  test_end_to_end.py  test_multimodule.py  test_performance.py  test_robustness.py  test_websocket_e2e.py
tests/test_protocol/: __init__.py  test_messages.py
tests/test_scripting/: __init__.py  test_api.py
tests/test_server/: __init__.py  test_protocol.py  test_telemetry.py  test_websocket.py
